--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 requests==2.18.1
-pandas==0.20.2
+pandas==0.22.0
 keras==2.1.2
 scikit_learn==0.19.1
 tensorflow==1.4.1
 tqdm==4.19.5
 numpy
+xgboost
